--- a/sass/site/blocks/_custom.scss
+++ b/sass/site/blocks/_custom.scss
@@ -25,3 +25,7 @@
 .stat--info {
   font-size: 1.125rem;
 }
+
+.subheading {
+  font-family: $font__heading;
+}
